# slack-llm-summarizer

./: .env.example  .gitignore  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml  requirements.txt  slack_app_manifest.yml
samples/: messages.json
scripts/: dev.ps1  setup.ps1  setup.sh
src/slack_llm_summarizer/: app.py  check_provider.py  cli.py  commands.py  config.py  context.py  errors.py  formatter.py  models.py  options.py  prompt.py  prompts.py  retrieval.py  schemas.py  slack_history.py  startup.py  validator.py
src/slack_llm_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/slack_llm_summarizer/llm/: __init__.py
src/slack_llm_summarizer/providers/: __init__.py  base.py  factory.py  gemini_provider.py  json_utils.py  openai_compatible_provider.py
tests/: test_command_parser.py  test_config.py  test_context.py  test_options.py  test_output_customization.py  test_prompt.py  test_provider_factory.py  test_retrieval.py  test_validator.py
